@@ -3,13 +3,12 @@ use Test2::V0;
 use List::Util qw(shuffle);
 use SkewHeap;
 
-my @values = 0 .. 20;
-my @shuffled = shuffle @values;
+my $count = 10;
 
 my $h1 = skewheap{ $a <=> $b };
 my $h2 = skewheap{ $a <=> $b };
 
-foreach (1 .. 10) {
+foreach (1 .. $count) {
   if ($_ % 2 == 0) {
     $h1->put($_);
   } else {
@@ -17,13 +16,16 @@ foreach (1 .. 10) {
   }
 }
 
-is $h1->merge($h2), 10, 'merge';
-is $h1->size, 10, 'size';
+ok my $h3 = $h1->merge($h2), 'merge';
 
-foreach my $i (1 .. 10) {
-  is $h1->take, $i, "take $i";
+is $h3->size, $count, 'size';
+
+foreach my $i (1 .. $count) {
+  my $v = $h3->take;
+  is $v, $i, "take $i";
 }
 
-is $h2->size, 0, 'merged heap is empty';
+is $h1->size, 5, 'merged heap retains size';
+is $h2->size, 5, 'merged heap retains size';
 
 done_testing;
