@@ -2,6 +2,7 @@
 -bugfix: define cxinc as Perl_cxinc when not defined in perls w/ MULTICALL_PUSH bug
 -feature: to_array() returns unordered array ref of values in the heap
 -feature: explain() generates a string describing the structure of the tree
+-behavior: merge() is now non-destructive and returns a new skew heap
 
 0.04 2018-07-25
 -Switch to vanilla XS
